--- a/index.html
+++ b/index.html
@@ -2,13 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rihab Cherni</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
+    <!-- Title & Description for SEO -->
+    <title>Rihab Cherni - Software Engineer Portfolio</title>
+    <meta name="description" content="Portfolio de Rihab Cherni - Software Engineer spécialisée en sécurité, développement full-stack, et optimisation web." />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="logo.png" sizes="32x32" />
+    <link rel="apple-touch-icon" href="logo.png" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:title" content="Rihab Cherni - Software Engineer Portfolio" />
+    <meta property="og:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
+    <meta property="og:image" content="logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rihab-cherni.vercel.app" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rihab Cherni - Software Engineer Portfolio" />
+    <meta name="twitter:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
+    <meta name="twitter:image" content="logo.png" />
+
+    <!-- Preconnect for performance -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
+
+    <!-- Fonts & Icons (async loading) -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    </noscript>
+
+    <!-- Security headers (si tu utilises Vercel -> headers.json) -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src * data:; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; font-src https://cdnjs.cloudflare.com; script-src 'self';" />
   </head>
+
   <body>
+    <noscript>
+      <p style="text-align:center; color:red;">⚠️ This website works best with JavaScript enabled.</p>
+    </noscript>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
