--- a/index.html
+++ b/index.html
@@ -34,21 +34,26 @@
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
   <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
 
-  <!-- Fonts & Icons (async loading) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" media="print"
-    onload="this.media='all'" />
+  <!-- Content Security Policy -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com;
+    style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+    font-src 'self' https://cdnjs.cloudflare.com;
+    img-src 'self' data: https://www.google-analytics.com;
+    connect-src 'self' https://www.google-analytics.com;
+  ">
+
+  <!-- Fonts & Icons (load asynchronously with JS, no inline handler) -->
+  <link id="fa-css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    media="print" />
   <noscript>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   </noscript>
-
-  <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com;
-        style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-        font-src 'self' https://cdnjs.cloudflare.com;
-        img-src 'self' data: https://www.google-analytics.com;
-        connect-src 'self' https://www.google-analytics.com;
-      ">
+  <script type="module">
+    const faLink = document.getElementById('fa-css');
+    faLink.onload = () => faLink.media = 'all';
+  </script>
 
 </head>
 
@@ -56,8 +61,10 @@
   <noscript>
     <p style="text-align:center; color:red;">⚠️ This website works best with JavaScript enabled.</p>
   </noscript>
+
   <div id="root"></div>
 
+  <!-- React entry point -->
   <script type="module" src="/src/main.jsx" defer></script>
 </body>
 
