--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <noscript>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   </noscript>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
   <script type="module">
     const faLink = document.getElementById('fa-css');
     faLink.onload = () => faLink.media = 'all';
