--- a/index.html
+++ b/index.html
@@ -5,28 +5,26 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Rihab Cherni - Software Engineer Portfolio</title>
+  <title>Rihab Cherni - Software Engineer</title>
   <meta name="description"
     content="Portfolio de Rihab Cherni - Software Engineer spécialisée en sécurité, développement full-stack, et optimisation web." />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo.png" sizes="32x32" />
-  <link rel="apple-touch-icon" href="logo.png" />
+  <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" />
+  <link rel="apple-touch-icon" href="/logo.png" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Rihab Cherni - Software Engineer Portfolio" />
-  <meta property="og:description"
-    content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
-  <meta property="og:image" content="logo.png" />
+  <meta property="og:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
+  <meta property="og:image" content="https://rihab-cherni.vercel.app/logo.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://rihab-cherni.vercel.app" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Rihab Cherni - Software Engineer Portfolio" />
-  <meta name="twitter:description"
-    content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
-  <meta name="twitter:image" content="logo.png" />
+  <meta name="twitter:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
+  <meta name="twitter:image" content="https://rihab-cherni.vercel.app/logo.png" />
 
   <!-- Preconnect & DNS Prefetch -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
