--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     content="Portfolio de Rihab Cherni - Software Engineer spécialisée en sécurité, développement full-stack, et optimisation web." />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" />
-  <link rel="apple-touch-icon" href="/logo.png" />
-
+  <link rel="icon" type="image/png" href="assets/logo.png" sizes="32x32" />
+  <link rel="apple-touch-icon" href="assets/logo.png" />
+  <link rel="preload" as="image" href="assets/logo.png">
   <!-- Open Graph -->
   <meta property="og:title" content="Rihab Cherni - Software Engineer Portfolio" />
   <meta property="og:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Rihab Cherni - Software Engineer Portfolio" />
   <meta name="twitter:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
-  <meta name="twitter:image" content="https://rihab-cherni.vercel.app/logo.png" />
+  <meta name="twitter:image" content="https://rihab-cherni.vercel.app/assets/logo.png" />
 
   <!-- Preconnect & DNS Prefetch -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
