--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" />
   <link rel="apple-touch-icon" href="/logo.png" />
-  <link rel="preload" as="image" href="/logo.png">
+  <link rel="preload" as="image" href="img.webp>">
   <!-- Open Graph -->
   <meta property="og:title" content="Rihab Cherni - Software Engineer Portfolio" />
   <meta property="og:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
