--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     content="Portfolio de Rihab Cherni - Software Engineer spécialisée en sécurité, développement full-stack, et optimisation web." />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" />
-  <link rel="apple-touch-icon" href="/logo.png" />
+  <link rel="icon" type="image/png" href="img.webp" sizes="32x32" />
+  <link rel="apple-touch-icon" href="img.webp" />
   <link rel="preload" as="image" href="img.webp">
   <!-- Open Graph -->
   <meta property="og:title" content="Rihab Cherni - Software Engineer Portfolio" />
   <meta property="og:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
-  <meta property="og:image" content="https://rihab-cherni.vercel.app/logo.png" />
+  <meta property="og:image" content="https://rihab-cherni.vercel.app/img.webp" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://rihab-cherni.vercel.app" />
 
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Rihab Cherni - Software Engineer Portfolio" />
   <meta name="twitter:description" content="Découvrez mes projets en cybersécurité, développement web et automatisation." />
-  <meta name="twitter:image" content="https://rihab-cherni.vercel.app/logo.png" />
+  <meta name="twitter:image" content="https://rihab-cherni.vercel.app/img.webp" />
 
   <!-- Preconnect & DNS Prefetch -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
